2005-08-10   Wolfgang Baer <WBaer@gmx.de>

	* kaffe/scripts/jdb.in: Add some explanations to the output of the jdb
	placeholder script.

2005-08-10  Kurt Miller <truk@optonline.net>

	* kaffe/kaffeh/support.c:
	Add constant suffixes to constant values (L, LL, f).
	Change CONSTANT_Long to print in decimal instead of hex.
	Fix CONSTANT_Double on little endian and lp64 arches.
	Allow private static final constants to be output.
	Output #undef before any constant #define to fix cases
	where multiple defines are output with same name 

2005-08-10  Dalibor Topic  <robilad@kaffe.org>

	* config/powerpc/jit3-icode.h:
	(HAVE_move_float_const, HAVE_move_double_const): Removed.

	* config/powerpc/jit3-powerpc.def (define_insn(move_float_const,
	fmove_RxC)): Removed empty function to fix unused variable warnings.
	(define_insn(move_double, fmovel_RxR)): Likewise.

	Based on a patch by:  Andreas Tobler  <toa@pop.agri.ch>

2005-08-10  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/intrp/machine.c (virtualMachine):
	Fixed build with JVMPI.

2005-08-10  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-08-08  Casey Marshall  <csm@gnu.org>

        PR classpath/23120
        * gnu/java/security/provider/DSAKeyPairGenerator.java
        (<init>): made public; set default values.
        (initialize): just call 'initialize(int,boolean,SecureRandom).'
        (initialize): just call 'initialize(DSAParams,SecureRandom).'
        (initialize): check all values for 'null' before overwriting.
        (initialize): fill in defaults or generate new parameters here.
        (generateKeyPair): don't create parameters; fill in 'random' if
        'null;' use 'random,' not a new Random object, when generating
        random numbers.
        (getDefaults): fix keysize check.

        PR classpath/22990
        * java/security/KeyPairGenerator.java (initialize): do nothing.

	2005-08-08  Tom Tromey  <tromey@redhat.com>

        PR classpath/23285: